<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Knowtaxi beta v1.3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_name">Enter Name</string>    
    <string name="submit">Submit</string>   
    
    <string name="ratenow">You\nRate now</string>
    <string name="GetRating">Check\nRating</string>
    
    <string name="btnclear">Clear</string>
    <string name="btnsubmit">Submit</string>
    
    <string name="acceptDigit">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    
    

</resources>
