<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_img1" >

    <EditText
        android:id="@+id/mobile_edittext"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/email_id"
        android:layout_below="@+id/email_id"
        android:layout_marginBottom="10dp"       
        android:background="@drawable/customdesing"
        android:ems="10"
        android:hint="@string/hint_mobile"
        android:inputType="number"       
        android:padding="2dp"
        android:maxLength="12"
        android:singleLine="true"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/mobile_edittext"
        android:layout_below="@+id/mobile_edittext"
        android:layout_marginBottom="10dp"
        android:background="@drawable/customdesing"
        android:ems="10"
        android:hint="@string/hint_name"
        android:padding="2dp"
        android:singleLine="true" />

    <CheckBox
        android:id="@+id/chkAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_edittext"
        android:layout_below="@+id/name_edittext"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:text="Terms and conditions*"
        android:textColor="#0059FF" />

    <Button
        android:id="@+id/submit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/chkAndroid"
        android:layout_below="@+id/chkAndroid"
        android:background="@drawable/buttoncorner"
        android:clickable="true"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/customdesing"
        android:editable="true"
        android:ems="10"
        android:gravity="center"
        android:padding="1dp"
        android:singleLine="true"
        android:textSize="20sp" />
</RelativeLayout>   
 